--- a/src/styles/components/IvueRadio.scss
+++ b/src/styles/components/IvueRadio.scss
@@ -51,7 +51,7 @@ $ease-in-out: ease-in-out;
         top: 0;
         width: 15px;
         height: 15px;
-        display: inline-block;
+        display: flex;
         background-color: $white-color;
         border-radius: 50%;
         border: 2px solid #535353;
